connect bad practice detection(#223)